[project]
name = "scrna-intro-tutorial"
version = "0.1.0"
description = "Beginner-friendly single-cell RNA-seq tutorial using Scanpy and CellTypist"
requires-python = ">=3.10"

dependencies = [
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "seaborn>=0.13",
    "umap-learn>=0.5.4",
    "h5py>=3.9",
    "leidenalg>=0.10.0",
    "igraph>=0.10.0",
    "celltypist>=1.6.0",
    "harmonypy>=0.2.0",
    "scikit-misc>=0.5.2",
    "scanorama>=1.7.4",
    "scvi-tools>=1.3.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "notebook>=7.0",
    "ipykernel>=6.0"
]

